Doing footer, alignment isn't correct

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,3 +1,4 @@
 $primary-color: #181818;
 $text-color: #f8f8f8;
 $link-color: #68c7e4;
+$hover-color: rgb(181, 116, 255);
