--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,12 @@
 @import 'config';
+@import 'menu';
 
 body {
     background-color: $primary-color;  
 }
 
-h1, h2, h3, h4 {
+
+h1, h2, h3, h4, p, a {
     font-family: 'Raleway', sans-serif;;
     margin: 0;
     height: 100%;
@@ -27,9 +29,117 @@ h1, h2, h3, h4 {
 .icons {
     padding: 20px;
     
-    
     a { 
         padding: 20px;
+        color: $link-color;
+        text-decoration: none;
+        &:hover {
+            color: $hover-color;
+            transition: all 0.3s ease-out;
+
+        }
+    }
+
+    
+}
+
+.menu-btn {
+    color: white;
+    right: 35px;
+    top: 35px;
+    cursor: pointer;
+  
+    .menu-bar {
+      color: white;
+      width: 28px;
+      height: 3px;
+      margin: 0 0 5px 0;
+    }
+  }
+  
+  
+.menu-item {
+    display: none;
+  }
+  
+
+#home {
+    margin: 30px 50px 30px 50px;
+}
+
+#main-footer {
+
+    // sector divider
+    .line{
+        width: 100%;
+        height: 2px;
+        background-color: white;
+    }
+
+    // footer grid
+
+    .footer{
+        display: grid;
+        grid-gap: 5px;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 
+        'linkedin github'
+        'contact contact'
+        'bio bio'
+        ;
+        color: $text-color;
+
+
+        .footer-github{
+            grid-area: github;
+            font-size: 8px;
+            text-align: left;
+        }
+    
+        .footer-linkedin{
+            grid-area: linkedin;
+            font-size: 8px;
+            text-align: right;
+        }
+    
+        .footer-bio{
+            grid-area: bio;
+            font-size: 12px;
+           
+        }
+        .footer-contact{
+    
+            grid: contact;
+            grid-column: 1/2;
+            justify-self: stretch;
+            align-items: center;
+            justify-items: center;
+    
+            text-align: center;
+            text-decoration: none;
+            letter-spacing: 1px;
+            color: $link-color;
+            border: solid $link-color 1px;
+            width: 110px;
+            
+            height: 20px;
+            line-height: 20px;
+    
+    
+            ;
+    
+            &:hover{
+                border: solid $hover-color 1px;
+                transition: all 0.5s ease-out;
+            }
+            
+        }
+    }
+
+
+
+    a { 
+        padding: 5px;
         color: $link-color;
         text-decoration: none;
         &:hover {
@@ -39,9 +149,5 @@ h1, h2, h3, h4 {
         }
     }
 
-    
 }
 
-#home {
-    margin: 30px 50px 30px 50px;
-}
